@@ -3449,6 +3449,10 @@ output_integer (cb_tree x)
 			output (", ");
 			output_integer (p->y);
 			output (")");
+		} else if (p->op == 'n') {
+			output (" ~ (");
+			output_integer (p->y);
+			output (")");
 		} else {
 			output ("(");
 #ifdef	COB_NON_ALIGNED
@@ -3465,7 +3469,18 @@ output_integer (cb_tree x)
 			}
 #endif
 			output_integer (p->x);
-			output (" %c ", p->op);
+			if (p->op == 'a')
+				output (" & ");
+			else if (p->op == 'o')
+				output (" | ");
+			else if (p->op == 'e')
+				output (" ^ ");
+			else if (p->op == 'l')
+				output (" << ");
+			else if (p->op == 'r')
+				output (" >> ");
+			else
+				output (" %c ", p->op);
 #ifdef	COB_NON_ALIGNED
 			if (CB_TREE_TAG (p->y) == CB_TAG_REFERENCE
 			 && p->y != cb_null) {
@@ -8836,6 +8851,7 @@ output_stmt (cb_tree x)
 			f1 = cb_code_field(ap->var);
 			if (!f1->flag_real_binary
 			 && !f1->flag_binary_assign
+			 && !(f1->usage == CB_USAGE_COMP_X && f1->size == 1)
 			 && f1->pic
 			 && f1->usage != CB_USAGE_LENGTH) {
 				output_prefix ();
