@@ -5828,6 +5828,66 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 		category = CB_CATEGORY_NUMERIC;
 		break;
 
+	case 'n':
+	case 'c':
+	case 'd':
+		rel_bin_op = 0;
+		category = CB_CATEGORY_NUMERIC;
+		break;
+
+	case 'a':
+	case 'o':
+	case 'e':
+	case 'l':
+	case 'r':
+		/* Bit-wise operators */
+		x = cb_check_numeric_value (x);
+		y = cb_check_numeric_value (y);
+		if (x == cb_error_node || y == cb_error_node) {
+			return cb_error_node;
+		}
+		if ((CB_REF_OR_FIELD_P (x)) 
+		 && !(CB_FIELD_PTR (x)->usage == CB_USAGE_COMP_5
+		  || CB_FIELD_PTR (x)->usage == CB_USAGE_COMP_X)) {
+			cb_error_x (CB_TREE(current_statement), 
+					_("%s should be COMP-X/COMP-5 for logical operator"), CB_FIELD_PTR (x)->name);
+			return cb_error_node;
+		}
+		if ((CB_REF_OR_FIELD_P (y)) 
+		 && !(CB_FIELD_PTR (y)->usage == CB_USAGE_COMP_5
+		  || CB_FIELD_PTR (y)->usage == CB_USAGE_COMP_X)) {
+			cb_error_x (CB_TREE(current_statement), 
+					_("%s should be COMP-X/COMP-5 for logical operator"), CB_FIELD_PTR (y)->name);
+			return cb_error_node;
+		}
+		if (cb_constant_folding
+		&&  CB_NUMERIC_LITERAL_P(x)
+		&&  CB_NUMERIC_LITERAL_P(y)) {
+			xl = CB_LITERAL(x);
+			yl = CB_LITERAL(y);
+			if (xl->scale == 0
+			&& yl->scale == 0) {
+				xval = atoll((const char*)xl->data);
+				if(xl->sign == -1) xval = -xval;
+				yval = atoll((const char*)yl->data);
+				if(yl->sign == -1) yval = -yval;
+				if (op == 'a')
+					sprintf (result, CB_FMT_LLD, xval & yval);
+				else if (op == 'o')
+					sprintf (result, CB_FMT_LLD, xval | yval);
+				else if (op == 'e')
+					sprintf (result, CB_FMT_LLD, xval ^ yval);
+				else if (op == 'l')
+					sprintf (result, CB_FMT_LLD, xval << yval);
+				else if (op == 'r')
+					sprintf (result, CB_FMT_LLD, xval >> yval);
+				return cb_build_numeric_literal (0, result, 0);
+			}
+		}
+		rel_bin_op = 0;
+		category = CB_CATEGORY_NUMERIC;
+		break;
+
 	case '=':
 	case '~':
 	case '<':
